2004-03-11  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/t-linux64 (LIB2FUNCS_EXTRA): Add darwin-ldouble.c.
	(SHLIB_MAPFILES): Add libgcc-ppc64.ver.
	(SHLIB_MKMAP_OPTS): Delete.
	(TARGET_LIBGCC2_CFLAGS): Add -specs.
	(bispecs): Add rule.
	* config/rs6000/libgcc-ppc64.ver: New file.
	* config/rs6000/ppc64-fp.c (__fixtfdi, __floatditf): New functions.
	(__floatdidf, __floatdisf): Optimize multiply.
	(__fixunstfdi): New function.
	* config/rs6000/rs6000.c (rs6000_complex_function_value): Allow for
	real and imag parts larger than one register.
	(function_arg): Correct type of reg used when fp arg split partially
	to stack.
	* config/rs6000/darwin-ldouble.c: Protect with #if !_SOFT_FLOAT
	and __MACH__ or __powerpc64__.

2004-03-10  Richard Henderson  <rth@redhat.com>

        PR c/14517
        * c-decl.c (grokdeclarator): Don't warn for duplicate qualifiers
        except for pedantic c90 mode.

2004-03-10  Andrew Haley  <aph@redhat.com>

	PR optimization/14381
	* function.c (expand_function_end): Emit a blockage insn before
	the epilogue when -fnon-call-exceptions is used.

2004-03-10  Joel Sherrill  <joel@oarcorp.com>

	PR target/14480
	* config.gcc (powerpc*-*-rtems*): Use rs6000/t-rtems.

2004-03-10  Roman Zippel  <zippel@linux-m68k.org>

	PR bootstrap/12371
	* config/m68k/m68k.h (FIXED_REGISTERS): Add arg pointer.
	(CALL_USED_REGISTERS): Likewise.
	(REG_CLASS_CONTENTS): Likewise.
	(REG_ALLOC_ORDER): New.
	(REGNO_REG_CLASS): Use regno_reg_class.
	* config/m68k/m68k.c: Add regno_reg_class array.

2004-03-10  Alan Modra  <amodra@bigpond.net.au>
	    Hartmut Penner  <hpenner@de.ibm.com>

	* config/rs6000/rs6000.c (invalid_gpr_mem): New function.
	(base_reg_operand): New function.
	(legitimate_offset_address_p): Don't test modes in an attempt to
	distinguish gpr vs fpr mem loads/stores.  Don't prohibit offsets
	invalid for 64-bit gpr loads/stores here.
	(secondary_reload_class): Add "inp" parameter.	Generate a reload
	for 64-bit gpr loads/stores.