@@ -1,3 +1,9 @@
+2004-03-11  Alan Modra  <amodra@bigpond.net.au>
+
+	* include/powerpc-signal.h: Revert 2004-01-21 change.
+	(INIT_SEGV, INIT_FPE): Provide powerpc64 versions.  Check return
+	from syscall for ppc32 versions.
+
 2004-02-25  Andrew Haley  <aph@redhat.com>
 
 	PR java/14296:
